<resources>
    <string name="app_name">Računica</string>
    <string name="title_activity_main">Računica</string>

    <string name="receipts">Receipts</string>
    <string name="scanner">Scan</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <string name="receipt_added">Added \'%1$s\'</string>
    <string name="receipt_updated">Updated \'%1$s\'</string>

    <string name="receipt_overview">%1$s</string>

    <string name="receipt_details_note">Leave a note for this receipt</string>

    <string name="receipt_transaction_details">Transaction details</string>
    <string name="receipt_details_amount">Amount</string>
    <string name="receipt_details_time">Date of receipt</string>
    <string name="receipt_details_type">Transaction type</string>
    <string name="receipt_details_type_refund">Refund</string>
    <string name="receipt_details_type_sale">Sale</string>
    <string name="receipt_details_details">Details</string>
    <string name="receipt_details_details_low">Low</string>
    <string name="receipt_details_details_high">High</string>
    <string name="receipt_details_details_explain">
        When you scan the receipt code, the receipt itself might store some information about the
        transaction in its QR code. This information is not complete and an online sync will be
        required in order to get all of the information.
        The problem with this is that it
    </string>
    <string name="receipt_id">Receipt number</string>
    <string name="receipt_purchaser_id">Purchaser identity</string>
    <string name="receipt_country">Country</string>


    <string name="receipt_store_title">Store details</string>
    <string name="receipt_store_name">Name</string>
    <string name="receipt_store_id">Identifier</string>
    <string name="receipt_store_municipality">Municipality</string>
    <string name="receipt_store_address">Address</string>
    <string name="receipt_store_city">City</string>

    <string name="receipt_unknown">Unknown</string>

    <string name="receipt_options_title">Options</string>
    <string name="receipt_options_try_fetching">Try obtaining full receipt</string>
    <string name="receipt_options_open_link">Open receipt link</string>
    <string name="receipt_options_full_receipt">Open full receipt</string>

    <string name="receipt_options_open_location">Set navigation to business</string>

    <string name="receipt_options_store_rename">Change the name of this business</string>
    <string name="store_rename">Type in the new business name</string>

    <string name="receipt_exists">This receipt already exists!</string>

    <string name="country_name_serbia">Serbia</string>
    <string name="country_name_bosnia">Bosnia and Herzegovina</string>
    <string name="receipt_code_short">"Code: "</string>
    <string name="receipt_store_registered_name">Registered name</string>
    <string name="receipt_details_store_note">Leave a note for this business</string>
    <string name="receipt_store_enter_custom_name">Add a custom name to this business</string>
    <string name="receipt_options_delete">Delete this receipt</string>
    <string name="relative_time_future">From the future</string>
    <string name="relative_time_very_short">Just now</string>
    <plurals name="relative_time_minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="relative_time_hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="relative_time_days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="relative_time_months">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="relative_time_years">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

    <string name="receipt_fetch_failure">Failed to obtain the full receipt!\n%1$s</string>
    <string name="ssl_exception">SSL failure: $1%s</string>
    <string name="unknown_failure">Unknown reason: $1%s</string>
    <string name="receipt_new_scan">Scan new receipt</string>

    <!-- Settings related options -->
    <string name="settings_import">Import receipts from file</string>
    <string name="settings_export">Export receipts from file</string>
    <string name="settings_try_fetching">Try obtaining full receipts</string>
    <string name="settings_force_rebuild">Force rebuild of all data</string>
    <string name="processing">Processing…</string>
    <string name="failed_items">Failed items (%1$d)</string>
    <string name="close">Close</string>
    <string name="finished">Finished</string>
    <string name="invalid_items">Invalid items (%1$d)</string>
    <string name="import_report">We\'ve had %1$d successes and %2$d failures with %3$d entries not being recognized as receipts</string>
    <string name="receipt_deletion_confirmation_text">Do you really want to delete this receipt?</string>
    <string name="receipt_deletion_confirmation_title">Confirm deletion</string>
</resources>