<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/settings_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_import" />

            <Button
                android:visibility="gone"
                android:id="@+id/settings_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_export" />

            <Button
                android:visibility="gone"
                android:id="@+id/settings_try_fetching"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_try_fetching" />

            <Button
                android:visibility="gone"
                android:id="@+id/settings_force_rebuild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorDanger"
                android:text="@string/settings_force_rebuild"
                android:textColor="@color/colorOnDanger" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>